footer section - corrected class name according to BEM methodology

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@
   border-radius: 50%;
   border: 1px solid #d9176c;
 }
-.f-links__links--icon.icon-active {
+.f-links__links--icon-active {
   color: #ffffff;
   background-color: #d9176c;
 }
