--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -48,7 +48,7 @@
       border-radius: 50%;
       border: 1px solid $clr-sec-pink-dark;
 
-      &.icon-active {
+      &-active {
         color: $clr-white;
         background-color: $clr-sec-pink-dark;
       }
