--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,7 @@
 .f-links__container--icon {
   display: flex;
   gap: 10px;
+  color: #3b2f4a;
 }
 .f-links__links {
   list-style: none;
@@ -163,9 +164,27 @@
   color: #d9176c;
 }
 
+.copyright {
+  padding-inline: 100px;
+  border-top: 1px solid #c4c4c4;
+}
+.copyright__text {
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  font-size: 12px;
+  color: #a4a4a4;
+  padding-block: 20px;
+}
+
 @media (max-width: 550px) {
-  .footer {
+  .footer,
+.copyright {
     padding-inline: 30px;
+  }
+  .copyright {
+    border: none;
+    text-align: center;
   }
   .logo__container,
 .f-links:is(:last-child, :nth-child(4)) {
