--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,8 @@
   }
 }
 .testimonial {
+  position: relative;
+  z-index: 1;
   padding-inline: 100px;
   background-color: #fdf8fe;
   display: flex;
@@ -159,7 +161,7 @@
 .testimonial__right::before {
   position: absolute;
   content: "";
-  top: 0;
+  top: 15%;
   left: -10%;
   width: 120%;
   height: 70%;
