--- a/assets/scss/_testimonial.scss
+++ b/assets/scss/_testimonial.scss
@@ -1,4 +1,6 @@
 .testimonial {
+  position: relative;
+  z-index: 1;
   padding-inline: $p-desktop;
   background-color: $clr-pri-bg-light;
   display: flex;
@@ -37,15 +39,11 @@
     border-radius: 10px;
     box-shadow: 0px 10px 10px rgba($color: $clr-pri-subtle, $alpha: 0.7);
   }
-  //
-  //
-  // ? Why this is not working?
-  // ? need to debug this
-  //
+
   &__right::before {
     position: absolute;
     content: "";
-    top: 0;
+    top: 15%;
     left: -10%;
     width: 120%;
     height: 70%;
