--- a/assets/scss/_reused_styles.scss
+++ b/assets/scss/_reused_styles.scss
@@ -45,3 +45,10 @@
   color: $clr-white;
   @include f-heading-6;
 }
+
+.pink-btn {
+  @extend .btn;
+  background-color: $clr-sec-pink-dark;
+  color: $clr-white;
+  @include f-heading-6;
+}
