--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,6 +2,7 @@
 @import "resets";
 @import "reused_styles";
 @import "advantages";
+@import "latest";
 @import "testimonial";
 @import "subscribe";
 @import "footer";
