--- a/assets/scss/_flash.scss
+++ b/assets/scss/_flash.scss
@@ -5,7 +5,7 @@
   background-color: $clr-pri-dark;
   color: $clr-white;
   display: flex;
-  gap: 1%;
+  gap: 15%;
 
   &__main-container {
     flex-basis: 25%;
@@ -78,6 +78,10 @@
       box-shadow: 0px 0px 30px -10px rgba(0, 0, 0, 0.8);
       gap: 20px;
       margin: 0 5px;
+
+      &--hide {
+        display: none;
+      }
 
       &__left {
         width: 130px;
@@ -211,6 +215,10 @@
       .fl-card {
         background-color: $clr-white;
         color: $clr-pri-dark;
+
+        &--hide {
+          display: inherit;
+        }
 
         &__star--null,
         &__reviews-count {
