--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,13 +42,13 @@
   margin-block: 20px;
 }
 
-.btn, .pink-btn, .latest__cta, .yellow-btn, .subscribe__btn {
+.btn, .offers__view-more, .pink-btn, .latest__cta, .yellow-btn, .subscribe__btn, .offers__card-container .off-card__cta {
   border: none;
   outline: none;
   cursor: pointer;
 }
 
-.yellow-btn, .subscribe__btn {
+.yellow-btn, .subscribe__btn, .offers__card-container .off-card__cta {
   background-color: #eaa451;
   color: #ffffff;
   font-family: "Poppins", sans-serif;
@@ -121,6 +121,152 @@
   }
   .adv-card__title {
     font-size: 14px;
+  }
+}
+.offers {
+  padding-block: 80px;
+  padding-inline: 100px;
+  text-align: center;
+  background-color: #fdf8fe;
+}
+.offers__desc {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: #a4a4a4;
+  max-width: 500px;
+  margin: 0 auto 50px;
+}
+.offers__arrow {
+  position: relative;
+  float: right;
+  top: -70px;
+  font-size: 20px;
+}
+.offers__arrow-right {
+  color: #eaa451;
+  margin-left: 30px;
+}
+.offers__card-container {
+  display: flex;
+  gap: 2%;
+  clear: right;
+}
+.offers__card-container .off-card {
+  flex-basis: 32%;
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 15px;
+}
+.offers__card-container .off-card__img-container {
+  width: 100%;
+  height: 300px;
+  border-radius: 20px;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+.offers__card-container .off-card__img {
+  width: 100%;
+}
+.offers__card-container .off-card__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  text-align: initial;
+  gap: 20px;
+  padding-inline: 20px;
+}
+.offers__card-container .off-card__title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  color: #3b2f4a;
+}
+.offers__card-container .off-card__tags-container {
+  display: flex;
+  gap: 10px;
+}
+.offers__card-container .off-card__tag {
+  text-transform: uppercase;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  font-size: 10px;
+  background-color: #f3f4ee;
+  padding: 10px;
+  border-radius: 5px;
+}
+.offers__card-container .off-card__desc {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: #3b2f4a;
+}
+.offers__card-container .off-card__author {
+  color: #3b2f4a;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  font-size: 12px;
+}
+.offers__card-container .off-card__cta-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.offers__card-container .off-card__cta {
+  font-size: 12px;
+  padding: 10px 25px;
+  border-radius: 5px;
+}
+.offers__card-container .off-card__price-container {
+  display: flex;
+  gap: 10px;
+}
+.offers__card-container .off-card__current-price {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  font-weight: bold;
+  font-size: 24px;
+  color: #3b2f4a;
+}
+.offers__card-container .off-card__old-price {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  font-weight: bold;
+  color: #c4c4c4;
+  text-decoration: line-through;
+  position: relative;
+  top: 3px;
+}
+.offers__view-more {
+  float: right;
+  background: inherit;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  display: none;
+}
+
+@media (max-width: 550px) {
+  .offers {
+    padding-inline: 30px;
+  }
+  .offers__arrow {
+    display: none;
+  }
+  .offers__card-container {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .offers__card-container .off-card:nth-last-of-type(1) {
+    display: none;
+  }
+  .offers__view-more {
+    margin-top: 20px;
+    display: initial;
   }
 }
 .flash {
@@ -388,7 +534,7 @@
   padding-inline: 100px;
   text-align: center;
 }
-.latest__title {
+.latest__title, .offers__title {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-size: 28px;
