--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,7 @@
 @use "variables" as *;
 @import "resets";
 @import "reused_styles";
+@import "trending";
 @import "advantages";
 @import "offers";
 @import "flash";
