--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,105 @@
   font-size: 16px;
 }
 
+.trending {
+  padding-inline: 100px;
+  padding-block: 80px;
+  text-align: center;
+}
+.trending__slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-block: 100px;
+}
+.trending .tr-slider__arrow {
+  position: absolute;
+  font-size: 30px;
+  z-index: 2;
+  padding: 30px;
+  border-radius: 50%;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+  background: #fff;
+  cursor: pointer;
+}
+.trending .tr-slider__arrow--left {
+  left: 20%;
+}
+.trending .tr-slider__arrow--right {
+  right: 20%;
+}
+.trending .tr-slider__img {
+  width: 25vw;
+  height: 50vh;
+  overflow: hidden;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+  position: relative;
+}
+.trending .tr-slider__img img {
+  width: 100%;
+}
+.trending .tr-slider__img--one {
+  transform: scale(0.8);
+  left: 18%;
+}
+.trending .tr-slider__img--two {
+  left: 9%;
+}
+.trending .tr-slider__img--three {
+  z-index: 10;
+  transform: scale(1.2);
+}
+.trending .tr-slider__img--four {
+  right: 9%;
+  z-index: 9;
+}
+.trending .tr-slider__img--five {
+  transform: scale(0.8);
+  right: 18%;
+}
+.trending__author-container {
+  margin-top: -85px;
+}
+.trending__author-img img {
+  position: relative;
+  z-index: 11;
+  width: 80px;
+  height: 80px;
+  border: 5px solid #ffffff;
+  border-radius: 50%;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  margin-bottom: 20px;
+}
+.trending__author {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 550px) {
+  .trending {
+    padding-inline: 30px;
+  }
+  .trending__author-container {
+    margin-top: -110px;
+  }
+  .trending__author-img img {
+    width: 60px;
+    height: 60px;
+    margin-bottom: 10px;
+  }
+  .trending .tr-slider__arrow {
+    font-size: 10px;
+    padding: 10px;
+  }
+  .trending .tr-slider__img {
+    width: 24vw;
+    height: 17vh;
+  }
+}
 .advantages {
   display: flex;
   flex-wrap: wrap;
@@ -129,7 +228,7 @@
   text-align: center;
   background-color: #fdf8fe;
 }
-.offers__desc {
+.offers__desc, .trending__desc {
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 14px;
@@ -157,6 +256,9 @@
   background-color: #ffffff;
   padding: 10px;
   border-radius: 15px;
+}
+.offers__card-container .off-card--active {
+  box-shadow: 2px 5px 25px 5px rgba(59, 47, 74, 0.3);
 }
 .offers__card-container .off-card__img-container {
   width: 100%;
@@ -534,7 +636,7 @@
   padding-inline: 100px;
   text-align: center;
 }
-.latest__title, .offers__title {
+.latest__title, .offers__title, .trending__title {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-size: 28px;
