--- a/assets/scss/_offers.scss
+++ b/assets/scss/_offers.scss
@@ -38,6 +38,10 @@
       padding: 10px;
       border-radius: 15px;
 
+      &--active {
+        box-shadow: 2px 5px 25px 5px rgba($color: $clr-pri-dark, $alpha: 0.3);
+      }
+
       &__img-container {
         width: 100%;
         height: 300px;
